objects/vlocity_cmt__Attribute__c.object
<CustomObject>
    <description>Represents the definition of an attribute which can be used for profiling, describing or configuring
        items tracked in the database. More specifically:
        1) Attributes are used to profile accounts and contacts to describe their interests, preferences and any other
        information that users desire to track. The same attributes can be used on products, documents and other content
        to describe the target profile of customers who might be interested in them.
        2) Attributes can allow users to filter a list of available and eligible products shown on an opportunity, quote
        or order to those matching some criteria.
        3) Attributes can be used to configure individual characteristics of a product on an opportunity, quote or
        order. For example, the operator may select one of three speeds available on a specific modem.</description>
    <fields>
        <fullName>vlocity_cmt__ActiveFlg__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates if the attribute is active. Only active attributes can be assigned.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ApplicableToAllRecords__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Reserved for future use.</description>
        <label>Applicable To All Records</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ApplicableToEntity__c</fullName>
        <description>Reserved for future use.</description>
        <label>Applicable To Entity</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Catalog</fullName>
                </value>
                <value>
                    <fullName>Catalog Category</fullName>
                </value>
                <value>
                    <fullName>Premise</fullName>
                </value>
                <value>
                    <fullName>Order</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Product Relationship</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AttributeCategoryCode__c</fullName>
        <description>Formula: Code of the parent attribute category.</description>
        <formula>vlocity_cmt__AttributeCategoryId__r.vlocity_cmt__Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attribute Category Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AttributeCategoryId__c</fullName>
        <description>Parent attribute category. Used for organizing the attributes into groupings.</description>
        <label>Attribute Category</label>
        <referenceTo>vlocity_cmt__AttributeCategory__c</referenceTo>
        <relationshipLabel>Attributes</relationshipLabel>
        <relationshipName>Attributes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AttributeCategoryName__c</fullName>
        <description>Formula: Name of the parent attribute category.</description>
        <formula>vlocity_cmt__AttributeCategoryId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attribute Category Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AttributeGroupType__c</fullName>
        <label>Attribute Group Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Link Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AutoCode__c</fullName>
        <description>Autonumber field optionally used to generate a unique attribute code.</description>
        <displayFormat>ATTRIBUTE-{000}</displayFormat>
        <label>Auto Code</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Code__c</fullName>
        <description>Unique code for this attribute.</description>
        <externalId>true</externalId>
        <label>Code</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Configurable__c</fullName>
        <defaultValue>true</defaultValue>
        <description>For product attributes, indicates if this attribute is configurable. When configurable, the user can configure the attribute after adding the Product to the cart.</description>
        <label>Configurable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CopyMode__c</fullName>
        <description>Reserved for future use.</description>
        <label>Copy Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Do Not Copy</fullName>
                </value>
                <value>
                    <fullName>Copy</fullName>
                </value>
                <value>
                    <fullName>Copy Reference</fullName>
                </value>
                <value>
                    <fullName>Generate As New</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CustomConfigUiTemplate__c</fullName>
        <description>Information describing the Vlocity UI Template or HTML/JavaScript to render when users ask to configure this attribute value. Useful when the user needs to interact with an external system to choose the attribute value (such as picking a phone number for a new mobile phone).</description>
        <label>Custom Config UI Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Description__c</fullName>
        <description>Description of this attribute.</description>
        <label>Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DesignTime__c</fullName>
        <description>Reserved for future use.</description>
        <label>Design Time Properties</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Visible</fullName>
                </value>
                <value>
                    <fullName>Editable</fullName>
                </value>
                <value>
                    <fullName>Required</fullName>
                </value>
                <value>
                    <fullName>Nullable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DisplaySequence__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Display sequence for this attribute within pick lists.</description>
        <label>Display Sequence</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EditMode__c</fullName>
        <description>Reserved for future use.</description>
        <label>Edit Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>User Editable</fullName>
                </value>
                <value>
                    <fullName>Generated/Formula</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveFromDate__c</fullName>
        <description>For product attributes, the start date at which this attribute becomes available to end users.</description>
        <label>Effectivity Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveUntilDate__c</fullName>
        <description>For product attributes, the end date after which this attribute is unavailable to end users.</description>
        <label>Effectivity End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Filterable__c</fullName>
        <defaultValue>true</defaultValue>
        <description>For product attributes, indicates if this attribute is enabled as a product selection filter.</description>
        <label>Filterable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__GlobalKey__c</fullName>
        <description>The globally unique identifier of the Product. Used to identify the product across Salesforce
            instances.</description>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__HelpText__c</fullName>
        <description>Help text to display when end users are configuring this attribute.</description>
        <label>Help Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsCloneable__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Whether this attribute should be cloned while cloning a line item.</description>
        <label>Cloneable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsEncrypted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates if attribute values need to be encrypted.</description>
        <label>Encrypted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsNotAssetizable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates if this attribute assignment should not be part of an Inventory Item.</description>
        <label>Not Assetizable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsPrivate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether the attribute is private to the owner or not. When unchecked, the attribute can be viewed and selected by all end users when associated to objects. When checked (therefore private) this attribute will only be visible to the user who created it.</description>
        <inlineHelpText>Is this attribute private to the owner (not visible to other users)?</inlineHelpText>
        <label>Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Overridable__c</fullName>
        <description>Reserved for future use.</description>
        <label>Overridable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Any Level</fullName>
                </value>
                <value>
                    <fullName>Object Level</fullName>
                </value>
                <value>
                    <fullName>Record Level</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OwnerId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the User that is considered the owner of this attribute.</description>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>VlocityAttributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PicklistId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the Vlocity Picklist that provides the valid values for this attribute.</description>
        <label>Picklist</label>
        <referenceTo>vlocity_cmt__Picklist__c</referenceTo>
        <relationshipLabel>Vlocity Attributes</relationshipLabel>
        <relationshipName>Vlocity_Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RunTime__c</fullName>
        <description>Reserved for future use.</description>
        <label>Run Time Properties</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Visible</fullName>
                </value>
                <value>
                    <fullName>Editable</fullName>
                </value>
                <value>
                    <fullName>Required</fullName>
                </value>
                <value>
                    <fullName>Nullable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__UniqueNameField__c</fullName>
        <description>Unique name for this attribute.</description>
        <label>Unique Name</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ValueType__c</fullName>
        <description>For product attributes, identifies the data type of this attribute (e.g., number, percent, text, or checkbox).</description>
        <label>Value Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Currency</fullName>
                </value>
                <value>
                    <fullName>Percent</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                    <default>true</default>
                    <label>Text</label>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Checkbox</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Datetime</fullName>
                </value>
                <value>
                    <fullName>Picklist</fullName>
                </value>
                <value>
                    <fullName>Multi Picklist</fullName>
                </value>
                <value>
                    <fullName>Lookup</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Value__c</fullName>
        <description>Default value for this attribute when assigned to an object.</description>
        <label>Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__isDefaultHidden__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hidden By Default</label>
        <type>Checkbox</type>
    </fields>
    <label>Vlocity Attribute</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <columns>NAME</columns>
        <columns>vlocity_cmt__ActiveFlg__c</columns>
        <columns>vlocity_cmt__AttributeCategoryId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Attributes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>